<resources>
    <string name="app_name">Charity</string>

    <string name="charity_introduction">
    This app made for making search for benefactors and send them text messages or emails
    to convince them to donate money or food or medicines for charity associations, to help
    jobless or destitute or poor people who are suffering during actual COVID-19 pandemy.
    You can search for benefactors by entering the locals that are profited during the
    COVID-19 pandemic by selling a lot of products, for example search for "Pharmacy" in a
    specific region or department.
    </string>

    <string name="show_locals_btn_text">Show locals</string>
    <string name="search_benefactor_legend_text">
        Search for benefactors by entering the local names such as "Pharmacy" or "Supermarket",
        after search done, the server displays a list of locals with their details such as
        phone number, email, etc, to use these informations to call for donation.
    </string>
    <string name="place_not_found_str">Place not found</string>
    <string name="place_not_found_Api_error">Server authorization problem: %s</string>
    <string name="activity_search_name">Search list</string>
    <string name="image_description">Store icon</string>
    <string name="save_stores_button_str">Save list</string>
    <string name="activity_details_name">Places details</string>
    <string name="image_description_names">Place name icon</string>
    <string name="image_description_address">Place address icon</string>
    <string name="image_description_phone">Place phone icon</string>
    <string name="image_description_website">Place website icon</string>
    <string name="data_not_available_str">None</string>
    <string name="no_places_in_data_provider_str">No locals registered, click button below to add new places</string>
    <string name="wait_fetching_current_position">Please wait while checking your current position…</string>

    <string name="activity_contact_name">Contact</string>
    <string name="str_btn_add_places">Register locals</string>
    <string name="send_sms_button_str">Send SMS</string>
    <string name="visit_website_button_str">Visit website</string>
    <string name="show_location_button_str">Show  location in map</string>
    <string name="phone_call_button_str">Call</string>
    <string name="charity_sms_subject">Charity request</string>
    <string name="charity_sms_message">
        I take this opportunity to request for donations to charity association or to
        jobless and needy peaple during this pandemic COVID-19. We appreciate your support
        so far in funding our project.
    </string>
    <string name="permission_already_rejected_str">Location fine permission is already rejected</string>
    <string name="permission_requesting_str">Permission requesting…</string>
    <string name="permission_already_granted_str">Location fine permission already granted</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied_str">Permission denied</string>
    <string name="permission_denied_message_str">Please allow geolocation authorization to continue</string>
    <string name="main_fragment_title">Intro</string>
    <string name="details_fragment_title">Saved locals</string>
    <string name="search_fragment_title">Locals finding</string>
    <string name="permission_not_granted">
        Please enable geo permission, go to settings and enable it,
        or clear application data or reinstall it.
    </string>
    <string name="wifi_not_enabled">Internet is not enabled, click \'settings\' button to enable it</string>
    <string name="gps_not_enabled">Localisation not enabled, click \'settings\' button to enable it</string>
    <string name="setting_button">Go to settings</string>
    <string name="send_charity_requests">Send charity request</string>
    <string name="error_fetching_current_position">Error when checking your position</string>
    <string name="error_requesting_server">Server error, check your internet connection or
        try in a few moments: %s
    </string>
    <!-- Preferences settings-->
    <string name="pref_key_edittext_surface" translatable="false">key_edittext_surface</string>
    <string name="pref_title_edittext_surface">Search surface(in Kilometers square)</string>
    <string name="pref_default_value_edittext_surface">250</string>
    <string name="pref_key_message_request" translatable="false">key_message_requests</string>
    <string name="pref_title_message_request">Charity content message</string>
    <string name="pref_key_category_localisation" translatable="false">key_category_localisation</string>
    <string name="pref_title_category_localisation">Localisations settings</string>
    <string name="pref_key_category_charity" translatable="false">key_category_charity</string>
    <string name="pref_title_category_charity">Charity</string>
    <string name="setting_title">Settings</string>
    <string name="value_surface_exeeded">Maximum value must be: %s, the entered value is exceeded</string>
    <string name="value_surface_minimal">Minimum value must be: %s, the entered value is minimal</string>
    <string name="empty_value_error_message">Empty values not accepted</string>


</resources>
