<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="@string/pref_key_category_localisation"
        android:title="@string/pref_title_category_localisation">
        <EditTextPreference
            android:key="@string/pref_key_edittext_surface"
            android:title="@string/pref_title_edittext_surface"
            android:defaultValue="@string/pref_default_value_edittext_surface"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_key_category_charity"
        android:title="@string/pref_title_category_charity">
        <EditTextPreference
            android:key="@string/pref_key_message_request"
            android:title="@string/pref_title_message_request"
            android:defaultValue="@string/charity_sms_message"/>
    </PreferenceCategory>

</PreferenceScreen>