<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recylerViewList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        tools:text="RecyclerView" >
</androidx.recyclerview.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recylerViewList"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="ProgressBar"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/no_places_tv"
        style="@style/textNormalStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_places_in_data_provider_str"
        app:layout_constraintBottom_toTopOf="@+id/register_locals_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/recylerViewList"
        app:layout_constraintTop_toBottomOf="@+id/recylerViewList" />

    <Button
        android:id="@+id/register_locals_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_add_places"
        app:layout_constraintBottom_toTopOf="@+id/recylerViewList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_places_tv" />

    <Button
        android:id="@+id/goto_settings_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_locals_button" />

</androidx.constraintlayout.widget.ConstraintLayout>