<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    style="@style/cardViewListItemStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingBottom="@dimen/fixed_dimension_15dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2">

        <TextView
            android:id="@+id/website"
            style="@style/detailTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:text="website" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/fixed_dimension_32dp"
            android:layout_height="@dimen/fixed_dimension_32dp"
            android:layout_marginTop="@dimen/fixed_dimension_8dp"
            android:layout_marginStart="@dimen/responsive_dimension_15dp"
            android:layout_marginLeft="@dimen/responsive_dimension_15dp"
            android:contentDescription="@string/image_description_website"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:src="@drawable/ic_public_black" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/fixed_dimension_32dp"
            android:layout_height="@dimen/fixed_dimension_32dp"
            android:layout_marginTop="@dimen/fixed_dimension_8dp"
            android:layout_marginStart="@dimen/responsive_dimension_15dp"
            android:layout_marginLeft="@dimen/responsive_dimension_15dp"
            android:contentDescription="@string/image_description_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:src="@drawable/ic_system_update_black" />

        <TextView
            android:id="@+id/phone_number"
            style="@style/detailTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            tools:text="phone" />

        <TextView
            android:id="@+id/place_name"
            style="@style/sectionNameStyle"
            android:background="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            tools:text="name"
            tools:textColor="@color/colorGray800" />

        <TextView
            android:id="@+id/place_address"
            style="@style/detailTextStyle"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            tools:text="address" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/fixed_dimension_32dp"
            android:layout_height="@dimen/fixed_dimension_32dp"
            android:layout_marginStart="@dimen/responsive_dimension_15dp"
            android:layout_marginLeft="@dimen/responsive_dimension_15dp"
            android:layout_marginTop="@dimen/fixed_dimension_15dp"
            android:contentDescription="@string/image_description_names"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_storefront_black" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/fixed_dimension_32dp"
            android:layout_height="@dimen/fixed_dimension_32dp"
            android:layout_marginStart="@dimen/responsive_dimension_15dp"
            android:layout_marginLeft="@dimen/responsive_dimension_15dp"
            android:layout_marginTop="@dimen/fixed_dimension_8dp"
            android:contentDescription="@string/image_description_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:src="@drawable/ic_map_black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>